loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: ';' expected but '=' found.
getX():Int=a
          ^